2014-01-22  Andreas Kupries  <aku@hephaistos>

	* ../../apps/pt: Ticket [c3ab006ca2]. Fixed help delivered by 'pt'
	  application.

2013-12-17  Andreas Kupries <andreask@activestate.com>

	* pt_parse_peg.man: Added missing documentation for the PEG parser
	  package.
	* pt_peg_op.man: Added missing documentation for this utility package.
	* pt_peg_op.tcl: Exported 'minimize'.

2013-12-06  Andreas Kupries <andreask@activestate.com>

	* tools/regenerate_parsers.tcl: Ticket [f5155519e7]. Dropped use
	* ../../apps/pt: of bash. Switched to easier to read invokation
	  without all the shell tricks and magic.

2013-08-06  Andreas Kupries  <aku@hephaistos>

	* pt_astree.man [Ticket 0d9f835d4d]: Removed (non)terminal
	  methods, and replaced with documentation for new, new0.

	* pt_peg_interp.man [Ticket 0d9f835d4d]: Fixed typo of
	  "pt::peg::interpreter", to "pt::peg::interp".

2013-03-11  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pt: Moved to the apps/ directory, with the other proper applications.
	* pt.man:

2013-03-04  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tests/data/ok/peg_json-indalign/0_basic_arithmetic: Updated to match
	* tests/data/ok/peg_json-indalign/2_fun_arithmetic: json::write 1.0.2
	* tests/data/ok/peg_json-indalign/3_peg_itself: ("/" not quoted as "\/")
	* tests/data/ok/peg_json-indalign/4_choice:
	* tests/data/ok/peg_json-indented/0_basic_arithmetic:
	* tests/data/ok/peg_json-indented/2_fun_arithmetic:
	* tests/data/ok/peg_json-indented/3_peg_itself:
	* tests/data/ok/peg_json-indented/4_choice:
	* tests/data/ok/peg_json-ultracompact/0_basic_arithmetic:
	* tests/data/ok/peg_json-ultracompact/2_fun_arithmetic:
	* tests/data/ok/peg_json-ultracompact/3_peg_itself:
	* tests/data/ok/peg_json-ultracompact/4_choice:

2013-02-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.15 ========================
	* 

2011-12-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
